# trayffeine

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  preview-build.yml  release.yml
docs/: ROADMAP.md
packaging/windows/: Trayffeine.iss  build.ps1  trayffeine.spec
packaging/winget/: README.md  metadata.json  update.ps1
scripts/: generate_assets.py
src/trayffeine/: __init__.py  __main__.py  app.py  app_logging.py  assets.py  i18n.py  keepawake.py  presenter.py  service.py  session.py  settings.py  tray.py  win32_tray.py  windows.py
tests/: test_app.py  test_app_logging.py  test_i18n.py  test_main.py  test_presenter.py  test_service.py  test_session.py  test_settings.py  test_tray.py  test_win32_tray.py  test_windows_input.py
